Added back original author for PR to orginial repo

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/gunnar2k/holidays-norway.git"
   },
-  "author": "Magnus Pladsen",
+  "author": "Gunnar Fornes",
   "license": "MIT",
   "keywords": [],
   "bugs": {
