--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "holidays-norway-ts",
   "version": "1.1.2",
   "description": "A small library to get norwegian holidays by any given year.",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist/**/*"
   ],
